campo forma pagto no relatorio de pedido

--- a/app/relatorio_pedido.html
+++ b/app/relatorio_pedido.html
@@ -78,6 +78,10 @@
                         </md-input-container>
 
                         <md-input-container class="md-block" flex-gt-sm>
+                          (FORMA PAGTO)
+                        </md-input-container>                            
+
+                        <md-input-container class="md-block" flex-gt-sm>
                           (VALOR)
                         </md-input-container>
 
@@ -116,6 +120,9 @@
                           {{ped.pedido_dataprevisaoentrega}}
                         </md-input-container>                        
 
+                        <md-input-container class="md-block" flex-gt-sm>
+                          {{ped.pedido_forma_pagto}}
+                        </md-input-container>
 
                         <md-input-container class="md-block" flex-gt-sm>
                           {{ped.pedido_valortotal}}
